# lazarus

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: add-a-tool.yml  bug-report.yml  config.yml  revival-failed.yml  revive-a-repo.yml
.github/workflows/: docs.yml  publish.yml  tests.yml
actions/decay-check/: action.yml  summarize.py
analysis/: RESULTS.md  compare_masif_scannet.py  compare_three_way.py
benchmark/: CROSSDOMAIN_METHODS.md  README.md  baseline.json  baseline.py  baseline_crossdomain.json  baseline_crossdomain_final.json  baseline_crossdomain_r.json  baseline_frame.json  baseline_joss.json  baseline_joss_final.json  baseline_joss_r.json  crossref.py  frame.json  frame.py  frame_crossdomain.json  frame_crossdomain.py  frame_crossdomain_r.json  frame_joss.json  frame_joss_r.json  joss.py  pilot_repos.txt  principled_sample.md  r-sysdeps.Dockerfile  report.py  results.json  results_frame.json  run.py
components/interface_pocket_consensus/: Dockerfile  lazarus.yaml  predict.py
demo/: diffdock_6moa_overlay.html  lazarus_flow.html
demo/dashboard/: README.md  app.py  build_traces.py  index.html  traces.json
docs/: CHALLENGES.md  DEMO_SCRIPT.md  IMAGES.md  PUBLISHING.md  compose.md  decay-check.md  how-it-works.md  index.md  quickstart.md  registry.md  resurrection_report.html
examples/: dmasif_goal.txt  fpocket_goal.txt  masif_site_goal.txt  scannet_goal.txt
examples/basset_predict_contract/: Dockerfile  REPRODUCE.md  lazarus.yaml  predict.py  smoke_test.py
examples/coconet_binning_contract/: Dockerfile  lazarus.yaml  predict.py  smoke_test.py
examples/deeplatentmicrobiome_env2otu_contract/: Dockerfile  REPRODUCE.md  lazarus.yaml  predict.py  smoke_test.py
examples/diffdock_contract/: Dockerfile  REPRODUCE.md  lazarus.yaml  predict.py  smoke_test.py
examples/dmasif_site_contract/: Dockerfile  lazarus.yaml  predict.py  smoke_test.py
examples/dnafeaturesviewer_genbank_plot_contract/: Dockerfile  lazarus.yaml  predict.py  smoke_test.py
examples/equibind_blind_docking_contract/: Dockerfile  lazarus.yaml  predict.py  smoke_test.py
examples/equidock_rigid_docking_contract/: Dockerfile  REPRODUCE.md  lazarus.yaml  predict.py  smoke_test.py
examples/fpocket2_contract/: Dockerfile  lazarus.yaml  predict.py  smoke_test.py
examples/hitea_contract/: Dockerfile  REPRODUCE.md  lazarus.yaml  predict.py  smoke_test.py
examples/masif_site_contract/: Dockerfile  REPRODUCE.md  lazarus.yaml  predict.py  smoke_test.py  transient_benchmark.txt
examples/pipelines/: binder_triage.yaml
examples/scannet_ppi_contract/: Dockerfile  lazarus.yaml  predict.py  smoke_test.py
examples/sequoya_nsgaii_msa_contract/: Dockerfile  REPRODUCE.md  lazarus.yaml  predict.py  smoke_test.py
giveback/: README.md
giveback/masif/: PR.md
giveback/scannet/: PR.md
notebooks/: Lazarus_Democratizing_Dead_SOTA.ipynb
registry/: index.json
registry/entries/: basset_predict.yaml  coconet_binning.yaml  deeplatentmicrobiome_env2otu.yaml  diffdock_blind_docking.yaml  dmasif_site.yaml  fpocket2.yaml  (+7 more)
scripts/: build_registry.py  publish_images.sh
tests/: test_benchmark.py  test_compose.py  test_contract.py  test_decaycheck.py  test_pinner.py  test_registry.py  test_sandbox.py  test_scout.py
(+16 files in other folders)
