[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lazarus-bio"
version = "0.0.1"
description = "Resurrect dead research code into a callable pipeline component."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Dean Sherry" }]
keywords = ["bioinformatics", "reproducibility", "agents", "dependency-pinning"]
dependencies = [
    "packaging>=21",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
lazarus = "lazarus.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
