[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lazarus-bio"
version = "0.0.1"
description = "Resurrect dead research code into a callable pipeline component."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Dean Sherry" }]
keywords = ["bioinformatics", "reproducibility", "agents", "dependency-pinning"]
dependencies = [
    "packaging>=21",
    "PyYAML>=6",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
# The autonomous loop needs the Claude Agent SDK (Python >= 3.10).
agent = ["claude-agent-sdk>=0.2"]

[project.scripts]
lazarus = "lazarus.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
